using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace JoggingPal
{
    class Results
    {
        double totalSpeed;
        double avgSpeed;
        int avgHeartRate;
    }
}
